# Overthrone

./: .gitignore  .tarpaulin.toml  119.txt  AGENTS.md  ARCHITECTURE.md  COMMAND-LIST.md  COMMAND_LIST.md  CONTRIBUTING.md  Cargo.toml  DAILY_UPDATE_REPORT.md  IMPLEMENTATION_STATUS.md  INTERVIEW_PREP_ANZ.md  LICENSE  Overthrone Deep Implementation Plan.md  PLAN-adcs-enhancement.md  PLAN.md  POC_REPORT.md  README.md  ROADMAP.md  TODO.md  build_errors.txt  build_errors_2.txt  cargo_check_out.txt  cargo_check_out2.txt  cargo_check_output.txt  check.txt  check_all.txt  check_core.txt  check_crawler.txt  check_current.txt  check_err.txt  check_errors.txt  check_final.txt  check_reaper.txt  check_reaper2.txt  cli_clippy.txt  clippy.toml  clippy_audit.txt  clippy_final.txt  clippy_final2.txt  (+16 more)
.cargo/: audit.toml
crates/overthrone-cli/: Cargo.toml
crates/overthrone-cli/src/: auth.rs  autopwn.rs  banner.rs  bloodhound_viewer.rs  bloodhound_viewer_backup.txt  cli_config.rs  commands_impl.rs  interactive_shell.rs  main.rs  modules_ext.rs  ovt_config.rs  ovt_main.rs  session_store.rs  tree_viewer.rs
crates/overthrone-cli/src/commands/: c2_cmd.rs  ccache.rs  config.rs  doctor.rs  mod.rs  plugin_cmd.rs  session.rs  wizard.rs
crates/overthrone-cli/src/tui/: app.rs  event.rs  graph_view.rs  mod.rs  runner.rs  ui.rs
crates/overthrone-core/: Cargo.toml  output.txt
crates/overthrone-core/src/: azure_ad.rs  checkpoint.rs  config.rs  cred_cache.rs  cred_store.rs  error.rs  http.rs  lib.rs  output.rs  types.rs
crates/overthrone-core/src/adcs/: auto_exploit.rs  csr.rs  esc1.rs  esc10.rs  esc11.rs  esc12.rs  esc13.rs  esc14.rs  esc15.rs  esc16.rs  esc2.rs  esc3.rs  esc4.rs  esc5.rs  esc6.rs  esc7.rs  esc8.rs  esc9.rs  esc_strong_mapping.rs  ldap_enumeration.rs  mod.rs  pfx.rs  web_enrollment.rs
crates/overthrone-core/src/c2/: cobalt_strike.rs  havoc.rs  mod.rs  profiles.rs  sliver.rs
crates/overthrone-core/src/crypto/: aes_cts.rs  cracker.rs  dpapi.rs  gpp.rs  hashcat_gpu.rs  hmac_util.rs  md4.rs  mod.rs  rc4_util.rs  smart_wordlist.rs  ticket.rs
crates/overthrone-core/src/exec/: atexec.rs  lolbin.rs  mod.rs  modules.rs  psexec.rs  shell.rs  smbexec.rs  winrm.rs  wmiexec.rs
crates/overthrone-core/src/graph/: bh_import.rs  builder.rs  edge.rs  mod.rs  node.rs  pathfinder.rs  queries.rs
crates/overthrone-core/src/mssql/: auth.rs  mod.rs  mssql_links.rs  tds.rs
crates/overthrone-core/src/peas/: credentials.rs  env.rs  mod.rs  network.rs  registry.rs  services.rs  software.rs  system.rs  tasks.rs  tokens.rs  users.rs
crates/overthrone-core/src/pivot/: mod.rs
crates/overthrone-core/src/plugin/: builtin.rs  loader.rs  mod.rs
crates/overthrone-core/src/postex/: cg_check.rs  cred_dump.rs  cves.rs  dpapi_extract.rs  edr_bypass.rs  litterbox.rs  lsaiso.rs  mod.rs  opsec.rs  skeleton_key.rs  skeleton_key_dll.rs  syscall.rs
crates/overthrone-core/src/proto/: coerce.rs  dcom.rs  dns.rs  drsr.rs  epm.rs  even.rs  gpo_write.rs  kerberos.rs  laps_ldaps.rs  ldap.rs  mod.rs  netbios.rs  ntlm.rs  pkinit.rs  registry.rs  rid.rs  secretsdump.rs  smb.rs  smb2.rs
crates/overthrone-core/src/proxy/: mod.rs  portfwd.rs  socks5.rs
crates/overthrone-core/src/scan/: discovery.rs  mod.rs  preauth_discovery.rs
crates/overthrone-core/tests/: c2_integration.rs  dns_integration.rs  drsr_test.rs  graph_test.rs  kerberos_test.rs  live_dc.rs  ntlm_test.rs  plugin_integration.rs  sccm_test.rs  smb_test.rs  tds_test.rs
crates/overthrone-crawler/: Cargo.toml
crates/overthrone-crawler/src/: cross_forest.rs  escalation.rs  foreign.rs  interrealm.rs  lib.rs  lib.rs.bak  mssql_links.rs  oplock.rs  pacing.rs  pam.rs  pivot.rs  responder.rs  runner.rs  sid_filter.rs  tls_fingerprint.rs  trust_map.rs
crates/overthrone-crawler/tests/: cross_forest_test.rs
crates/overthrone-forge/: Cargo.toml
crates/overthrone-forge/src/: acl_backdoor.rs  adcs_dispatcher.rs  asrep_pipeline.rs  bronze_bit.rs  cert_auto_enroll.rs  cert_store.rs  cleanup.rs  convert.rs  dcsync_user.rs  diamond.rs  dsrm.rs  exec_util.rs  golden.rs  icert_passage.rs  lib.rs  ms_wcce_dcom.rs  nopac.rs  pkinit_auth.rs  rotate.rs  runner.rs  s4u2self_pkinit.rs  sapphire.rs  shadow_credentials.rs  silver.rs  skeleton.rs  stealth.rs  validate.rs
crates/overthrone-hunter/: Cargo.toml
crates/overthrone-hunter/src/: acl_reasoning.rs  adidns.rs  asreproast.rs  auto_crack.rs  bad_successor.rs  coerce.rs  constrained.rs  crack.rs  delegation_chain.rs  kerberoast.rs  lib.rs  machine_harvest.rs  ntlmv1_roast.rs  rbcd.rs  relay_hash_extract.rs  runner.rs  smart_wordlist.rs  spray.rs  tickets.rs  unconstrained.rs  userenum.rs  xp_dirtree.rs
crates/overthrone-pilot/: Cargo.toml
crates/overthrone-pilot/src/: adaptive.rs  coerce_tcp.rs  dc_verify.rs  executor.rs  goals.rs  lib.rs  planner.rs  playbook.rs  qlearner.rs  runner.rs  session.rs  trail.rs  wizard.rs
crates/overthrone-reaper/: Cargo.toml
crates/overthrone-reaper/src/: acls.rs  adcs.rs  computers.rs  delegations.rs  export.rs  file_carver.rs  gmsa.rs  gpos.rs  gpp_fetch.rs  groups.rs  laps.rs  laps_gmsa.rs  lib.rs  mssql.rs  mssql_audit.rs  ntlm_to_tgt.rs  ntlmv1_detection.rs  ous.rs  policy.rs  powerview.rs  risk_assessment.rs  runner.rs  snaffler.rs  spns.rs  trusts.rs  users.rs
crates/overthrone-reaper/tests/: adcs_esc_checks.rs
crates/overthrone-relay/: Cargo.toml
crates/overthrone-relay/src/: adcs_relay.rs  captive_portal.rs  exchange.rs  http_asymmetric.rs  http_relay.rs  lib.rs  mitm6.rs  poisoner.rs  relay.rs  responder.rs  smb_daemon.rs  tls.rs  tls_relay.rs  utils.rs  wpad.rs
crates/overthrone-scribe/: Cargo.toml
crates/overthrone-scribe/src/: html.rs  lib.rs  mapper.rs  markdown.rs  mitigations.rs  narrative.rs  pdf.rs  pipeline.rs  runner.rs  session.rs  xlsx.rs
crates/overthrone-viewer/: Cargo.toml  SPECIFICATIONS.md  playwright.config.js
crates/overthrone-viewer/src/: graph_data.rs  lib.rs  server.rs
crates/overthrone-viewer/tests/: screenshot_tests.rs  viewer.spec.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: kerberos_parser.rs  ntlm_parser.rs  smb2_parser.rs
(+72 files in other folders)
