[package]
name = "overthrone"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Autonomous Active Directory Red Team Framework"

# Full binary name
[[bin]]
name = "overthrone"
path = "src/main.rs"

# Shorthand alias — shares the same entry point as `overthrone`.
# Cargo warns about this but it compiles and works correctly.
[[bin]]
name = "ovt"
path = "src/ovt_main.rs"

[dependencies]
overthrone-core = { path = "../overthrone-core" }
overthrone-reaper = { path = "../overthrone-reaper" }
overthrone-hunter = { path = "../overthrone-hunter" }
overthrone-pilot = { path = "../overthrone-pilot", features = ["qlearn"] }
overthrone-crawler = { path = "../overthrone-crawler" }
overthrone-forge = { path = "../overthrone-forge" }
overthrone-scribe = { path = "../overthrone-scribe" }
overthrone-relay = { path = "../overthrone-relay" }
clap.workspace = true
clap_complete.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tui-widget-list = "0.13"

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
toml.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword = "7.4.0"
kerberos_asn1.workspace = true
hex.workspace = true
base64.workspace = true
chrono = { version = "0.4.44", features = ["serde"] }
ldap3 = { workspace = true }
rand = "0.8"
rustyline = { version = "14.0", features = ["derive"] }
rustyline-derive = "0.10"
dirs = "5.0"


[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true

[features]
default = ["qlearn"]
qlearn = []
vendored-openssl = ["openssl/vendored"]

[target.'cfg(any(target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = false }
