[package]
name = "overthrone"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Autonomous Active Directory Red Team Framework"

# Full binary name
[[bin]]
name = "overthrone"
path = "src/main.rs"

# Shorthand alias — shares the same entry point as `overthrone`.
# Cargo warns about this but it compiles and works correctly.
[[bin]]
name = "ovt"
path = "src/ovt_main.rs"

[dependencies]
overthrone-core = { version = "0.3.0-beta", path = "../overthrone-core" }
overthrone-reaper = { version = "0.3.0-beta", path = "../overthrone-reaper", optional = true }
overthrone-hunter = { version = "0.3.0-beta", path = "../overthrone-hunter", optional = true }
overthrone-pilot = { version = "0.3.0-beta", path = "../overthrone-pilot", optional = true }
overthrone-crawler = { version = "0.3.0-beta", path = "../overthrone-crawler", optional = true }
overthrone-forge = { version = "0.3.0-beta", path = "../overthrone-forge", optional = true }
overthrone-scribe = { version = "0.3.0-beta", path = "../overthrone-scribe", optional = true }
overthrone-relay = { version = "0.3.0-beta", path = "../overthrone-relay", optional = true }
overthrone-viewer = { version = "0.3.0-beta", path = "../overthrone-viewer", optional = true }
clap.workspace = true
clap_complete.workspace = true
ratatui = "0.29"
crossterm = "0.28"

async-trait = "0.1"

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
toml.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword = "7.4.0"
kerberos_asn1.workspace = true
hex.workspace = true
base64.workspace = true
chrono = { version = "0.4.44", features = ["serde"] }
ldap3 = { workspace = true }
rand.workspace = true
rustyline = { version = "14.0", features = ["derive"] }
rustyline-derive = "0.10"
dirs = "5.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures.workspace = true


[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true

[features]
default = ["full"]
full = ["reaper", "hunter", "forge", "relay", "pilot", "crawler", "viewer", "scribe", "responder"]
responder = ["overthrone-crawler/responder"]
hunter = ["dep:overthrone-hunter"]
forge = ["dep:overthrone-forge"]
relay = ["dep:overthrone-relay"]
pilot = ["dep:overthrone-pilot"]
reaper = ["dep:overthrone-reaper"]
crawler = ["dep:overthrone-crawler"]
viewer = ["dep:overthrone-viewer"]
scribe = ["dep:overthrone-scribe"]
qlearn = []
vendored-openssl = ["openssl/vendored"]

[target.'cfg(any(target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = false }
