[package]
name = "overthrone-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library: protocols, crypto, types, graph engine"

[dependencies]
# Async & Core
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
byteorder.workspace = true
futures.workspace = true
colored.workspace = true
des.workspace = true
rc4.workspace = true
pbkdf2.workspace = true

# Protocols
ldap3.workspace = true
petgraph.workspace = true

# Crypto (use workspace versions)
aes.workspace = true
cbc.workspace = true
hmac.workspace = true
md-5.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
md4.workspace = true
hex.workspace = true
digest.workspace = true

# ASN.1 / Kerberos
rasn.workspace = true
kerberos_asn1.workspace = true
kerberos_crypto.workspace = true

# Networking
hickory-resolver.workspace = true

# SMB (with compatible version)
smb = "0.11.1"

# WinRM - Native Win32 API
windows = { version = "0.62", features = [
    "Win32_System_RemoteManagement",
    "Win32_Foundation",
    "Win32_Security",
]} 
async-trait = "0.1"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
