[package]
name = "overthrone-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library: protocols, crypto, types, graph engine"
# v2 - cache bust

[dependencies]
# Async & Core
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
byteorder.workspace = true
futures.workspace = true
colored.workspace = true
des.workspace = true
rc4.workspace = true
pbkdf2.workspace = true

# Parallel Processing & Compression
rayon.workspace = true
zstd.workspace = true

# Protocols
ldap3.workspace = true
petgraph.workspace = true

# Crypto (use workspace versions)
aes.workspace = true
cbc.workspace = true
hmac = "0.12"
md-5 = "0.10"
md4 = "0.10"
sha2.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
digest.workspace = true

# ASN.1 / Kerberos
rasn.workspace = true
kerberos_asn1.workspace = true
kerberos_crypto.workspace = true

# Networking
hickory-resolver.workspace = true

async-trait = "0.1"

# ── Windows-only dependencies ──────────────────────────────
# The `smb` crate depends on sspi → windows-future which only
# compiles on Windows. The `windows` crate provides Win32 APIs
# for WinRM that are unavailable on other platforms.
[target.'cfg(windows)'.dependencies]
smb = "0.11.1"
windows = { version = "0.62", features = [
    "Win32_System_RemoteManagement",
    "Win32_Foundation",
    "Win32_Security",
]}

# ── Linux/macOS cross-platform dependencies ─────────────────
# pavao: libsmbclient bindings for SMB file I/O + named pipes
# ntlmclient: pure Rust NTLM for WS-Man/WinRM
# quick-xml: WS-Man SOAP XML parsing
# reqwest: HTTP client for WinRM WS-Man
[target.'cfg(not(windows))'.dependencies]
pavao = "0.2"
ntlmclient = "0.2"
quick-xml = { version = "0.39", features = ["serialize"] }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
