[package]
name = "overthrone-crawler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AD trust traversal & cross-domain escalation engine"

[dependencies]
overthrone-core = { version = "0.1.31", path = "../overthrone-core" }
overthrone-reaper = { version = "0.1.31", path = "../overthrone-reaper" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
colored.workspace = true
indicatif.workspace = true
uuid.workspace = true
log = "0.4.29"

[features]
default = []
# TODO: The `interrealm` feature enables cross-realm/forest attack modules
# (ExtraSIDs, SID filtering bypass, inter-realm TGT forging, etc.).
# To enable it, the following Kerberos APIs must be implemented first in overthrone-core:
#   1. Cross-realm TGT request (KRB_TGS_REQ with sname = krbtgt/TARGET_REALM)
#   2. Inter-realm referral handling (KRB_TGS_REP with server-referral)
#   3. PAC manipulation for ExtraSIDs injection (MS-PAC §2.6.1)
#   4. SID filtering detection (trust attributes / netlogon trust info)
# See also: crates/overthrone-core/src/proto/kerberos.rs
interrealm = []

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
