[package]
name = "overthrone-crawler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AD trust traversal & cross-domain escalation engine"

[dependencies]
overthrone-core = { version = "0.2.1-beta", path = "../overthrone-core" }
overthrone-reaper = { version = "0.2.1-beta", path = "../overthrone-reaper" }
overthrone-forge = { version = "0.2.1-beta", path = "../overthrone-forge", optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
colored.workspace = true
indicatif.workspace = true
uuid.workspace = true
hex.workspace = true
base64.workspace = true
log = "0.4.29"
rand.workspace = true

[features]
default = []
interrealm = ["dep:overthrone-forge"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
