[package]
name = "overthrone-pilot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Autonomous attack orchestration — goal-driven planning, playbook execution, adaptive re-planning"

[dependencies]
overthrone-core   = { path = "../overthrone-core" }
overthrone-hunter = { path = "../overthrone-hunter" }
overthrone-crawler = { path = "../overthrone-crawler" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
colored.workspace = true
indicatif.workspace = true
uuid.workspace = true
rand.workspace = true
comfy-table = "7"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
