[package]
name = "overthrone-reaper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Autonomous AD enumeration engine"

[dependencies]
overthrone-core = { path = "../overthrone-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
indicatif.workspace = true
colored.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
