[package]
name = "overthrone-reaper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Autonomous AD enumeration engine"

[dependencies]
overthrone-core = { version = "0.4.0", path = "../overthrone-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
indicatif.workspace = true
colored.workspace = true
uuid.workspace = true
base64.workspace = true
hex.workspace = true
log = "0.4.29"
zip = "0.6"
regex = "1"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
