[package]
name = "overthrone-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NTLM relay and responder framework for Overthrone"

[lib]
name = "overthrone_relay"
path = "src/lib.rs"

[dependencies]

# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
byteorder.workspace = true
hex.workspace = true
digest.workspace = true

# Network packet handling
pnet = "0.35.0"
pnet_datalink = "0.35.0"
pnet_packet = "0.35.0"
pnet_transport = "0.35.0"

# Core dependencies
overthrone-core = { version = "0.1.31", path = "../overthrone-core" }
async-trait = "0.1"

# Crypto — use workspace versions
md4.workspace = true
hmac.workspace = true
sha2.workspace = true
md-5.workspace = true

# Random number generation — must match workspace
rand.workspace = true

# Base64 encoding
base64.workspace = true
