[package]
name = "overthrone-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NTLM relay and responder framework for Overthrone"

[lib]
name = "overthrone_relay"
path = "src/lib.rs"

[dependencies]
overthrone-core = { version = "0.2.1-beta", path = "../overthrone-core" }
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
aes.workspace = true
cmac.workspace = true
rand.workspace = true
base64.workspace = true
async-trait = "0.1"
rustls-native-certs = "0.8.3"
tokio-rustls = "0.26.4"
