[package]
name = "overthrone-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NTLM relay and responder framework for Overthrone"

[lib]
name = "overthrone_relay"
path = "src/lib.rs"

[dependencies]
overthrone-core = { version = "0.3.1", path = "../overthrone-core" }
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
aes.workspace = true
cmac.workspace = true
rand.workspace = true
base64.workspace = true
async-trait = "0.1"
rustls-native-certs = "0.8.3"
rustls = { version = "0.23" }
tokio-rustls = "0.26.4"
tokio-socks = "0.5"
rustls-pemfile = "2"
