[package]
name = "overthrone-viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BloodHound-style graph viewer for Overthrone"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
open = "5"
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
